[gd_scene load_steps=7 format=3 uid="uid://bce0opxuglncl"]

[ext_resource type="Script" path="res://scripts/Lobby.gd" id="1_lobby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.35, 0.35, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_focus"]
bg_color = Color(0.25, 0.25, 0.3, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.85, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.2, 0.2, 0.25, 0.95)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar/MarginContainer"]
layout_mode = 2

[node name="GameTitle" type="Label" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "丛林赌徒"

[node name="Spacer" type="Control" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UserInfo" type="VBoxContainer" parent="TopBar/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="WelcomeLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/UserInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "欢迎回来"
horizontal_alignment = 2

[node name="UsernameLabel" type="Label" parent="TopBar/MarginContainer/HBoxContainer/UserInfo"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "玩家"
horizontal_alignment = 2

[node name="LogoutButton" type="Button" parent="TopBar/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 50)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "退出登录"

[node name="MainContent" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContent"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="WelcomePanel" type="Panel" parent="MainContent/VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="MainContent/VBoxContainer/WelcomePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MainContent/VBoxContainer/WelcomePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="WelcomeTitle" type="Label" parent="MainContent/VBoxContainer/WelcomePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 36
text = "欢迎来到游戏大厅"
horizontal_alignment = 1

[node name="WelcomeMessage" type="Label" parent="MainContent/VBoxContainer/WelcomePanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "准备好开始你的冒险了吗？"
horizontal_alignment = 1

[node name="GameButtons" type="HBoxContainer" parent="MainContent/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="StartGameButton" type="Button" parent="MainContent/VBoxContainer/GameButtons"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "开始游戏"

[node name="ProfileButton" type="Button" parent="MainContent/VBoxContainer/GameButtons"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "个人资料"

[node name="SettingsButton" type="Button" parent="MainContent/VBoxContainer/GameButtons"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "设置"

[node name="InventoryButton" type="Button" parent="MainContent/VBoxContainer/GameButtons"]
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.85, 0.3, 1)
theme_override_colors/font_hover_color = Color(1, 0.85, 0.3, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_hover")
theme_override_styles/focus = SubResource("StyleBoxFlat_focus")
text = "背包"

[connection signal="pressed" from="TopBar/MarginContainer/HBoxContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="pressed" from="MainContent/VBoxContainer/GameButtons/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MainContent/VBoxContainer/GameButtons/ProfileButton" to="." method="_on_profile_button_pressed"]
[connection signal="pressed" from="MainContent/VBoxContainer/GameButtons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainContent/VBoxContainer/GameButtons/InventoryButton" to="." method="_on_inventory_button_pressed"]
